fixed spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ font-family: 'Pontano Sans', sans-serif;
 display: inline-block;
 background-color: #95C64A;
 text-align: center;
-margin: 2rem;
+margin: .50rem;
 padding: .25rem;}
 
 p {font-family: 'Pontano Sans', sans-serif;}
